CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LSD)

INCLUDE_DIRECTORIES(
    ${LSD_SOURCE_DIR}/include
)

IF (APPLE)
    SET(PLATFORM "darwin")
ELSEIF (UNIX)
    SET(PLATFORM "linux")
ELSEIF (WIN32)
    SET(PLATFORM "win32")
ENDIF ()

MESSAGE(${PLATFORM})
SET(LIBRARY_OUTPUT_PATH ${LSD_BINARY_DIR}/../pylsd/lib/${PLATFORM})

ADD_LIBRARY(lsd SHARED ./src/lsd.cpp)
